# network-analyzer-tui

./: Cargo.toml  README.md  build.rs
src/: app.rs  lib.rs  main.rs  windows.rs
src/app/: core.rs  event.rs  mod.rs  ui.rs
src/app/core/: multithreading.rs
src/app/ui/: event.rs  views.rs
src/app/ui/views/: apps_table.rs  welcome_screen.rs
src/common/: app.rs  network.rs  pcap.rs
src/common/network/: ethernet2.rs  link.rs
src/common/network/link/: internet.rs
src/common/network/link/internet/: ipv4.rs  ipv6.rs  transport.rs
src/common/network/link/internet/transport/: application.rs  tcp.rs  udp.rs
src/windows/: mod.rs  tcp_table.rs
